[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/tile.gd" type="Script" id=1]

[node name="tile" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="move_tween" type="Tween" parent="."]

[node name="alpha_tween" type="Tween" parent="."]

[node name="destroy_tween" type="Tween" parent="."]

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.6

[connection signal="tween_completed" from="alpha_tween" to="." method="_on_alpha_tween_tween_completed"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_detsroy_timer_timeout"]
